took another shot at verb tampering